--- a/amplify/backend/auth/kendrachatbotd2fda923/kendrachatbotd2fda923-cloudformation-template.yml
+++ b/amplify/backend/auth/kendrachatbotd2fda923/kendrachatbotd2fda923-cloudformation-template.yml
@@ -74,18 +74,21 @@ Parameters:
   userpoolClientSetAttributes:
     Type: String
             
-  authSelections:
+  resourceName:
     Type: String
               
-  resourceName:
+  authSelections:
     Type: String
                                       
   useDefault:
     Type: String
                       
+  usernameAttributes:
+    Type: CommaDelimitedList
+              
   userPoolGroupList:
     Type: CommaDelimitedList
-                          
+              
   dependsOn:
     Type: CommaDelimitedList
     
@@ -100,7 +103,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'cognit3ecc9250_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'kendrad2fda923_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -112,10 +115,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: cognit3ecc9250_role_external_id
+                sts:ExternalId: kendrad2fda923_role_external_id
       Policies: 
         - 
-          PolicyName: cognit3ecc9250-sns-policy
+          PolicyName: kendrad2fda923-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -156,12 +159,14 @@ Resources:
           RequireNumbers: false
           RequireSymbols: false
           RequireUppercase: false
+      
+      UsernameAttributes: !Ref usernameAttributes
           
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: cognit3ecc9250_role_external_id
+        ExternalId: kendrad2fda923_role_external_id
     
   
   UserPoolClientWeb:
@@ -169,7 +174,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: cognit3ecc9250_app_clientWeb
+      ClientName: kendrad2fda923_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -179,7 +184,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: cognit3ecc9250_app_client
+      ClientName: kendrad2fda923_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -244,7 +249,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: cognit3ecc9250_userpoolclient_lambda_iam_policy
+      PolicyName: kendrad2fda923_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -261,7 +266,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: cognit3ecc9250_userpoolclient_lambda_log_policy
+      PolicyName: kendrad2fda923_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -301,7 +306,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'kendra_chat_bot_identitypool_b0b2c1af', !Join ['',['kendra_chat_bot_identitypool_b0b2c1af', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'kendrachatbotd2fda923_identitypool_d2fda923', !Join ['',['kendrachatbotd2fda923_identitypool_d2fda923', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
